--- a/Clothes_Web/style/test.css
+++ b/Clothes_Web/style/test.css
@@ -1,3 +1,33 @@
 body{
-    background-color: aqua;
+    background: center;
 }
+div.global{
+    text-align: center;
+}
+div.bg_img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+div.name{
+    padding-top: 20px;
+}
+div.tele_number{
+    padding-top: 5px;
+}
+div.address{
+    padding-top: 5px;
+}
+.size{
+
+    padding-top: 5px;
+}
+
+div.style{
+    padding-top: 20px;
+}
+div.conform{
+    padding-top: 20px;
+}
+
