--- a/imook/css/main.css
+++ b/imook/css/main.css
@@ -49,20 +49,64 @@ body{
     font-size: 16px;
     color: #C00;
 }
-.nav{
+.nav {
     height: 40px;
 }
 .nav_left{
     width: 10px;
     background:url(../images/nav_left.jpg) no-repeat;
-    float: left;
 }
 .nav_mid{
     width: 980px;
-    background: url("../images/nav_bg.jpg") no-repeat;
+    background: url(../images/nav_bg.jpg)  repeat-x;
 }
 .nav_right{
     width: 10px;
-    background: url("../images/nav_right.jpg") no-repeat;
+    background: url(../images/nav_right.jpg) no-repeat;
+}
+
+.nav_right,.nav_mid,.nav_left{
     float: left;
+    height:40px;
+}
+.nav_mid_left,.nav_mid_right{
+    float: left;
+}
+.nav_mid_left{
+    width: 680px;
+}
+.nav_mid_right{
+    width: 300px;
+}
+.nav_mid_left li{
+    float: left;
+    list-style-type: none ;
+    width: 100px;
+    text-align: center;
+    line-height:40px ;
+}
+.nav_mid_left a:link,.nav_mid_left a:visited{
+    text-decoration: none;
+    color: #FFF;
+    font-size: 16px;
+    font-family: "DejaVu Sans";
+
+}
+
+.nav_mid_left a:hover,.nav_mid_left a:active{
+    text-decoration: none;
+    color: #FF0;
+    font-size: 16px;
+    font-family: "DejaVu Sans";
+
+}
+.search_test{
+    width: 190px;
+    height: 25px;
+    margin-top: 5px;
+    background: url(../images/search.jpg) no-repeat right center;
+    background-color: #FFFFFF;
+    padding-right: 25px;
+    border: 1px solid #FFFFFF;
+
 }
