--- a/YWL/css/cmstop-error.css
+++ b/YWL/css/cmstop-error.css
@@ -1,10 +1,9 @@
 html,body,head,div,p,a{margin: 0;padding: 0;}
 .body-bg{background-color: #dff1f4;}
-.main{width: 700px;overflow: hidden;height: 542px;margin: 20px auto;background: url(../images/error-bg.png) no-repeat 0 0;}
+.main{width: 700px;overflow: hidden;height: 542px;margin: 20px auto;}
 .title{font-size: 14px;font-weight: bold;margin: 254px 0 0 218px;color: #d3d3d3;}
 .btn{
 	display:block;
-	background: url(../images/error-btn.png) no-repeat 0 0;
 	width: 145px;
 	height: 45px;
 	font-size: 14px;
